# vue-webview

./: README.md
ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
webview/: .gitignore  build-linux.spec  pyproject.toml  requirements.txt
webview/app/: main.py
